--- a/AdminApp/Properties/Resources.resx
+++ b/AdminApp/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="email" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\email.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="search-button-without-text-md" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\search-button-without-text-md.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
